Update the player and player controls for use on tablet * Fixes video playout on tablet * Show play button in video overlay * Improve overlay hide logic * Make sure seekbar sets correct time when video is paused

--- a/client/css/linkedtv.css
+++ b/client/css/linkedtv.css
@@ -228,14 +228,6 @@ a {
     height: 100%;
     background-color: black;
 }
-.player .video-overlay {
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 12; /* ion-content z-index is 11 */
-}
 .player video, canvas {
     top: 0;
     left: 0;
@@ -257,6 +249,35 @@ a {
   width: auto; 
   height: auto;
 }
+.video-overlay {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 12; /* ion-content z-index is 11 */
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  display: table;
+  cursor: pointer;
+  filter: alpha(opacity=80);
+  opacity: 0.8;
+  color: white;
+  font-size: 100px;
+}
+.video-overlay .play-icon,
+.video-overlay .loading-icon {
+  vertical-align: middle;
+  text-align: center;
+  display: table-cell;
+}
+.video-overlay .loading-icon {
+  font-size: 60px;
+}
+
 
 /*.player video::-webkit-media-controls {
     display:none !important;
@@ -286,6 +307,8 @@ a {
   background-repeat: no-repeat;
 }
 .player-controls {
+}
+.player-control-bar {
     width: 100%;
     position: absolute;
     z-index: 13;
@@ -295,10 +318,10 @@ a {
     /*background-color: rgba(0,0,0,0.6);*/
     color: white;
 }
-.player-controls .icon {
+.player-control-bar .icon {
     color: #FFF;
 }
-.player-controls .icon.selected {
+.player-control-bar .icon.selected {
     color: rgb(65,146,183);
 }
 
